# DataArc-SynData-Toolkit-Lan

./: .gitignore  DEPENDENCIES.md  README.md  README_zh.md  app.py  pyproject.toml
.openhands/microagents/: repo.md
configs/: example.yaml  grpo.yaml  sdg.yaml  sft.yaml
docs/: DENPENDENCIES_zh.md  DEPENDENCIES.md  DEPENDENCIES_zh.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_zh.md  USE_CASES.md  WEBUI.md  WEBUI_zh.md
examples/: README.md
examples/finance/: finance.yaml
examples/mathematics/: gsm8k_demo.jsonl  math.yaml
examples/medicine/: med.yaml
sdgsystem/: __main__.py  buffer.py  cli.py  parallel.py  pipeline.py  prompts.py  utils.py
sdgsystem/app/: __init__.py  main.py  run.py
sdgsystem/configs/: config.py  constants.py
sdgsystem/dataset/: dataset.py  process.py
sdgsystem/distillation/: base.py  evol_instruct.py  sdg_distill.py  self_instruct.py
sdgsystem/documents/: chunk.py  export.py  load.py  parse.py  retrieve.py
sdgsystem/evaluation/: __init__.py  answer_comparison.py  evaluator.py
sdgsystem/generation/: __init__.py  base.py  generator.py  rewriter.py
sdgsystem/huggingface/: __init__.py  crawl.py
sdgsystem/models/: __init__.py  answer_extraction.py  client.py  models.py  processor_arguments.py  usage_counter.py
sdgsystem/tasks/: __init__.py  base.py  distill.py  local.py  task_executor.py  total_executor.py  web.py
sdgsystem/trainer/: __init__.py  config.py  data_preprocessing.py  launcher.py
sdgsystem/translation/: translator.py
sdgsystem/webui/: README.md  README_zh.md  biome.json  index.html  (+4 more)
train/: requirements.txt
(+60 files in other folders)
